# data-nexus

./: .gitignore  CLAUDE.md  README.md  cjpm.toml  todo-impl.md  todo.md
.cargo/: config.toml
.claude/: README.md
.claude/agents/: README.md  dn-reviewer.md
.claude/commands/: README.md  dn-board.md  dn-dod.md  dn-release.md  dn-security-slice.md  dn-smoke.md  dn-stream.md
.claude/rules/: data-nexus-development.md  streaming-performance.md  testing-smoke.md
.github/workflows/: smoke-matrix.yml
data-proxy/: Cargo.toml  README.md  rust-toolchain.toml
data-proxy/.cargo/: config.toml
data-proxy/app/api/: Cargo.toml
data-proxy/app/config/: Cargo.toml
data-proxy/app/config/src/: config.rs
data-proxy/app/metrics/: Cargo.toml
data-proxy/app/metrics/src/: metrics.rs
data-proxy/app/server/: Cargo.toml
data-proxy/app/server/src/: backend_const.rs  server.rs
data-proxy/cmd/pisa/: Cargo.toml
data-proxy/cmd/pisa/src/: main.rs  main2.rs  node.rs  otel.rs
data-proxy/docs/: build-cache.md
data-proxy/error/: Cargo.toml
data-proxy/examples/: OBSERVABILITY.md  admin-auth-gateway-config.toml  admin-auth.snippet.toml  cross-protocol-mysql-to-pg.toml  cross-protocol-pg-to-mysql.toml  docker-compose.dev.yml  dual-listener-gateway-config.toml  example-config-temp.toml  example-config.toml  example-config2.toml  gateway-config.toml  postgresql-gateway-config.toml  run-smoke-matrix.sh  security-audit-sample-gateway-config.toml  security-cedar-gateway-config.toml  security-column-gateway-config.toml  security-deny-gateway-config.toml  security-mask-gateway-config.toml  security-passthrough-gateway-config.toml  security-portal-gateway-config.toml  security-portal-xproto-gateway-config.toml  security-portal-xproto-pg-mysql-gateway-config.toml  security-state-file-gateway-config.toml  security-stream-gateway-config.toml  security-stream-page-gateway-config.toml  security-stream-rss-gateway-config.toml  security-ticket-gateway-config.toml  security-time-gateway-config.toml  security-watermark-gateway-config.toml  smoke-admin-auth.sh  smoke-cross-protocol-pg-to-mysql.sh  smoke-cross-protocol-stream.sh  smoke-cross-protocol.sh  smoke-dual-listener.sh  smoke-security-audit-sample.sh  smoke-security-audit.sh  smoke-security-cedar-reload.sh  smoke-security-cedar.sh  smoke-security-column.sh  smoke-security-config-validate.sh  (+15 more)
data-proxy/examples/cedar-policies/: orders.cedar
data-proxy/examples/cedar-policies-attrs/: attrs-example.cedar
data-proxy/examples/prod/: README.md  env.example  gateway-jwks.example.toml  gateway.example.toml  render-config.sh
data-proxy/examples/sql/: todo.sql
data-proxy/gateway/core/: Cargo.toml
data-proxy/gateway/core/src/: admin_auth.rs  audit.rs  audit_index.rs  audit_opendal.rs  audit_pipeline.rs  cedar_pdp.rs  config.rs  dialect.rs  error.rs  lib.rs  model.rs  object_set.rs  obligations.rs  pdp.rs  plugin.rs  policy_file.rs  remote_pdp.rs  route.rs  security.rs  sharding.rs  state_crypto.rs  ticket.rs  time_rules.rs  translation.rs  transport.rs  types.rs  vault.rs
data-proxy/http/: Cargo.toml
data-proxy/http/src/: http.rs  lib.rs
data-proxy/http/src/http/: admin_auth.rs  admin_ui.rs  jwks.rs  mod.rs
data-proxy/parser/mysql/: Cargo.toml  Cargo2.toml  build.rs
data-proxy/parser/mysql/examples/: parser_demo.rs
data-proxy/parser/mysql/src/: grammar.y  lex.rs  lib.rs  parser.rs
data-proxy/parser/mysql/src/ast/: api.rs  base.rs  dal.rs  ddl.rs  dml.rs  mod.rs
data-proxy/plugin/: Cargo.toml
data-proxy/plugin/src/: build_phase.rs  config.rs  context.rs  lib.rs
data-proxy/plugin/src/circuit_break/: mod.rs
data-proxy/plugin/src/tests/: mod.rs
data-proxy/protocol/codegen/: Cargo.toml
data-proxy/protocol/mysql/: Cargo.toml  pkcs12.sh
data-proxy/protocol/mysql/src/: column.rs  common_packet.rs  err.rs  lib.rs  mysql_const.rs  row.rs  session.rs  util.rs  value.rs
data-proxy/protocol/mysql/src/client/: auth.rs  codec.rs  conn.rs  mod.rs  resultset.rs  stream.rs  tls_opts.rs
data-proxy/protocol/mysql/src/server/: auth.rs  codec.rs  mod.rs  stream.rs  tls.rs  tls2.rs
data-proxy/protocol/postgresql/: Cargo.toml
data-proxy/protocol/postgresql/src/: lib.rs
data-proxy/proxy/: Cargo.toml
data-proxy/proxy/endpoint/: Cargo.toml
data-proxy/proxy/endpoint/src/: endpoint.rs
data-proxy/proxy/loadbalance/: Cargo.toml
data-proxy/proxy/loadbalance/src/: balance.rs  random_weighted.rs  roundrobin_weighted.rs
data-proxy/proxy/pool/: Cargo.toml
data-proxy/proxy/pool/src/: conn_pool.rs
data-proxy/proxy/src/: factory.rs  proxy.rs
data-proxy/proxy/src/listener/: mod.rs
data-proxy/proxy/strategy/: Cargo.toml
data-proxy/proxy/strategy/src/: config.rs  rewrite.rs  route.rs
data-proxy/proxy/strategy/src/discovery/: monitor_reconcile.rs
data-proxy/proxy/strategy/src/monitors/: read_only_monitor.rs
data-proxy/proxy/strategy/src/readwritesplitting/: dynamic_rw.rs  mod.rs  rule_match.rs  static_rw.rs
data-proxy/proxy/strategy/src/sharding_rewrite/: meta.rs  mod.rs
data-proxy/runtime/gateway/: Cargo.toml
data-proxy/runtime/gateway/src/: backend_conn.rs  core_engine.rs  dialect.rs  gateway.rs  lib.rs  object_extract.rs  otel_metrics.rs  otel_metrics_stub.rs  supervisor.rs  transaction_fsm.rs
data-proxy/runtime/gateway/src/backend/: mod.rs  mysql.rs  pg_tcp_relay.rs  pg_tls.rs  postgresql.rs
data-proxy/runtime/gateway/src/frontend/: mysql.rs  postgresql.rs
data-proxy/runtime/gateway/src/server/: executor.rs  metrics.rs  mod.rs  server.rs  stmt_cache.rs  util.rs
data-proxy/runtime/shardingsphereproxy/: Cargo.toml
data-proxy/runtime/shardingsphereproxy/src/: shardingsphereproxy.rs
data-proxy/version/: Cargo.toml  build.rs
data-proxy/version/src/: version.rs
data-ui/: .dockerignore  Dockerfile  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: admin-auth-password.md  admin-rbac-design.md  data-audit-architecture.md  data-nexus-protocol-gateway-plan.md  data-nexus-tech-architecture-2026.md  data-security-roadmap.md  sql.md  ticket-vault-runbook.md
src/: main.cj
(+41 files in other folders)
