[package]
name = "http"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
security-cedar = ["gateway_core/security-cedar", "runtime_gateway/security-cedar"]
audit-opendal = ["gateway_core/audit-opendal", "runtime_gateway/audit-opendal"]

[dependencies]
async-trait = "0.1"
config = { path = "../app/config" }
gateway_core = { path = "../gateway/core" }
runtime_gateway = { path = "../runtime/gateway" }
once_cell = "1.10.0"
pisa_error = { path = "../error", package = "error" }
pisa_metrics = { path = "../app/metrics", package = "metrics" }
proxy = { path = "../proxy" }
server = { path = "../app/server" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.113", features = [] }
tokio = { version = "1.34.0", features = ["rt"] }
ver = { package = "version", path = "../version" }
axum = "0.6.20"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.9"
# default-features off avoids simple_asn1/time MSRV issues on older rustc.
jsonwebtoken = { version = "9.3", default-features = false }
# Blocking client for JWKS fetch (Admin auth path is sync per-request with cache).
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64 = "0.22"
parking_lot = "0.12"

[dev-dependencies]
hyper = "0.14"
tokio = { version = "1.34.0", features = ["macros", "rt"] }
tower = { version = "0.4", features = ["util"] }
# RSA keygen for JWKS unit tests only.
rsa = { version = "0.9", default-features = false, features = ["std"] }
rand = "0.8"
pkcs1 = { version = "0.7", default-features = false, features = ["alloc"] }
