[package]
name = "config"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[build-dependencies]
vergen = { version = "8.0.0-beta.3", features =  ["build", "git", "gitcl", "rustc"] }


[dependencies]
api = { path = "../api" }
gateway_core = { path = "../../gateway/core" }
clap = { version = "3.2.12", features = ["env"] }
plugin = { path = "../../plugin" }
proxy = { path = "../../proxy" }
strategy = { path = "../../proxy/strategy" }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
#runtime_mysql = { path = "../../runtime/mysql" }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8.19"
tracing = "0.1.13"
tracing-subscriber = "0.3.9"
