[package]
name = "data-proxy"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "src/main.rs"

[features]
default = []
# Optional OpenTelemetry OTLP export (enable with --features otel).
# Runtime still requires OTEL_EXPORTER_OTLP_ENDPOINT to activate.
otel = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-appender-tracing2",
  "dep:tracing-opentelemetry",
  "runtime_gateway/otel",
]
# Optional Cedar data-plane PDP (F26). Prefer rustc ≥1.88 (smoke uses 1.94.1).
security-cedar = [
  "runtime_gateway/security-cedar",
  "http/security-cedar",
]
# Optional OpenDAL cold archive for rotated audit JSONL (B04b).
audit-opendal = [
  "runtime_gateway/audit-opendal",
  "http/audit-opendal",
]

#[build-dependencies]
#anyhow = { version = "1.0", default-features = false }
#vergen = { version = "8.0.0-beta.0", features =  ["build", "git", "gitcl"] }


[dependencies]
async-std = { version = "1.9.0" }
bytes = "1"
chrono = "0.4"
config = { path = "../../app/config" }
futures = { version = "0.3", default-features = false }
http = { path = "../../http" }
num_cpus = "1.0"
pisa_metrics = { path = "../../app/metrics", package = "metrics" }
pprof = { version = "0.4.4", features = ["protobuf", "flamegraph"] }
proxy = { path = "../../proxy" }
runtime_gateway = { path = "../../runtime/gateway" }
serde = { version = "1.0.203", features = ["derive"] }
server = { path = "../../app/server" }
tokio = { version = "1.34.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.14" }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.37"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
warp = { version = "0.3" }
vergen = "7.5.0"
# Optional OTel stack (feature = "otel"). Versions aligned for otlp + tracing bridge.
opentelemetry = { version = "0.27", optional = true, default-features = false, features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", optional = true, default-features = false, features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", optional = true, default-features = false, features = ["trace", "metrics", "logs", "grpc-tonic"] }
# 0.27-compatible appender (upstream crate jumped to 0.32+).
opentelemetry-appender-tracing2 = { version = "0.27.1", optional = true, default-features = false }
tracing-opentelemetry = { version = "0.28", optional = true, default-features = false }

