[package]
name = "gateway_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Optional Cedar PDP (F26). Requires rustc ≥1.88 (project smoke uses 1.94.1).
# Enable: cargo test -p gateway_core --features security-cedar
security-cedar = ["dep:cedar-policy"]
# Optional OpenDAL cold archive for rotated audit JSONL (B04b/B04c).
# Enable: cargo test -p gateway_core --features audit-opendal
# Prefer rustc ≥1.88 when combined with cedar; OpenDAL 0.54 alone is MSRV 1.82.
audit-opendal = ["dep:opendal", "dep:tokio"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
# B06: SQLite side-index for Admin audit search (bundled = no system libsqlite).
# Empty security.audit.index_path keeps the connection closed (zero runtime cost).
rusqlite = { version = "0.32", features = ["bundled"] }
# H05: advisory file locks for multi-process ticket/vault JSON on shared disk.
fs2 = "0.4"
# Pinned major line; 4.4+ works with rustc 1.94 (MSRV of latest transitive deps).
cedar-policy = { version = "4.4", optional = true }
# Default features bring rustls TLS + memory + tokio executor (consumers cannot
# enable `reqwest/rustls-tls` directly). Add fs + cloud object stores for B04c.
opendal = { version = "0.54", optional = true, features = [
  "services-fs",
  "services-s3",
  "services-oss",
] }
tokio = { version = "1", optional = true, features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
