[package]
name = "runtime_gateway"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Optional OpenTelemetry business metrics on the command path.
otel = ["dep:opentelemetry"]
# Optional Cedar PDP (propagates to gateway_core).
security-cedar = ["gateway_core/security-cedar"]
# Optional OpenDAL audit archive (propagates to gateway_core).
audit-opendal = ["gateway_core/audit-opendal"]

[dependencies]
async-trait = "0.1"
byteorder = "0.5.3"
bytes = "1"
common = { path = "../common" }
conn_pool = { path = "../../proxy/pool" }
endpoint = { path = "../../proxy/endpoint" }
futures = "0.3.25"
gateway_core = { path = "../../gateway/core" }
iota = "0.2"
loadbalance = { path = "../../proxy/loadbalance" }
mysql_parser = { path = "../../parser/mysql" }
mysql_protocol = { path = "../../protocol/mysql", package = "mysql_protocol" }
postgresql_protocol = { path = "../../protocol/postgresql", package = "postgresql_protocol" }
# PostgreSQL AST classification for DialectParser (runtime only; not gateway_core).
sqlparser = { version = "0.51", default-features = false, features = ["std", "visitor"] }
once_cell = "1.10.0"
parking_lot = "0.12.0"
pisa_error = { path = "../../error", package = "error" }
plugin = { path = "../../plugin" }
proxy = { path = "../../proxy" }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_derive = "1.0"
strategy = { path = "../../proxy/strategy" }
thiserror = "1.0"
tokio = { version = "1.18.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-postgres = { version = "0.7" }
# A08: raw PG TCP frame relay (auth + message framing).
postgres-protocol = "0.6"
# A08: TLS for PG pool path (tokio-postgres) and TCP relay.
postgres-native-tls = "0.5"
native-tls = "0.2"
tokio-native-tls = "0.3"
fallible-iterator = "0.2"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.9"
tower = { version = "0.4.13" }
#mysql-macro = { path = "../macros" }
indexmap = "1.9.1"
lazy_static = "1.4.0"
rayon = "1.5"
lexical = "6"
lexical-core = "0.8.5"
prometheus = "0.13.3"
# metrics + trace so opentelemetry 0.27 pulls thiserror for Error derive.
opentelemetry = { version = "0.27", optional = true, default-features = false, features = ["metrics", "trace"] }
